fix: Don't show sort handle when only selected module is visible

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
     display: block;
     border-bottom-style: none;
 }
+
+.modules > .selected :global(.sortable-handle) {
+    display: none;
+}
